[gd_scene load_steps=6 format=3 uid="uid://b0hs7cg85pwwx"]

[ext_resource type="Script" path="res://app/main-menu/select-player-shield/select_player_shield.gd" id="1_fyf7t"]
[ext_resource type="PackedScene" uid="uid://desy7wwqh5j8x" path="res://ui/game-ui/game-header.tscn" id="2_r5rgr"]
[ext_resource type="PackedScene" uid="uid://d1q1oo6dpavt8" path="res://ui/game-ui/game-panel.tscn" id="3_tx82h"]
[ext_resource type="Texture2D" uid="uid://cpcey5vrxd20" path="res://common/scroll.jpg" id="4_3kvea"]
[ext_resource type="PackedScene" uid="uid://l4g7jgfosw2v" path="res://ui/game-ui/game-button.tscn" id="5_adkwu"]

[node name="MainMenuSelectPlayerShield" type="VBoxContainer"]
script = ExtResource("1_fyf7t")

[node name="Header" parent="." instance=ExtResource("2_r5rgr")]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_vertical = 0
label = "Choose A Shield"

[node name="Selector" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 4

[node name="List" parent="Selector" instance=ExtResource("3_tx82h")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/List"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="Selector/List/Margin"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="PlayerShieldDetails" type="VBoxContainer" parent="Selector"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="View" parent="Selector/PlayerShieldDetails" instance=ExtResource("3_tx82h")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/PlayerShieldDetails/View"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="View" type="SubViewportContainer" parent="Selector/PlayerShieldDetails/View/Margin"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Selector/PlayerShieldDetails/View/Margin/View"]
disable_3d = true
handle_input_locally = false
size = Vector2i(256, 200)
render_target_update_mode = 4

[node name="Background" type="Sprite2D" parent="Selector/PlayerShieldDetails/View/Margin/View/SubViewport"]
position = Vector2(128, 100)
scale = Vector2(1, 0.78)
texture = ExtResource("4_3kvea")

[node name="Stats" parent="Selector/PlayerShieldDetails" instance=ExtResource("3_tx82h")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/PlayerShieldDetails/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="Selector/PlayerShieldDetails/Stats/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Description" type="RichTextLabel" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
text = "This is just some weapon details"
metadata/_edit_lock_ = true

[node name="Stats" type="GridContainer" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout"]
layout_mode = 2
columns = 2

[node name="MaxDefencesCnt" type="HBoxContainer" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats/MaxDefencesCnt"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defences"

[node name="Value" type="Label" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats/MaxDefencesCnt"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "5"
horizontal_alignment = 1

[node name="Reload" type="HBoxContainer" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats/Reload"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reload"

[node name="Value" type="Label" parent="Selector/PlayerShieldDetails/Stats/Margin/Layout/Stats/Reload"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "5"
horizontal_alignment = 1

[node name="Controls" parent="." instance=ExtResource("3_tx82h")]
layout_mode = 2
size_flags_vertical = 8

[node name="Margin" type="MarginContainer" parent="Controls"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="HBoxContainer" parent="Controls/Margin"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Return" parent="Controls/Margin/Layout" instance=ExtResource("5_adkwu")]
custom_minimum_size = Vector2(87, 48)
layout_mode = 2
label = "Return"

[node name="Continue" parent="Controls/Margin/Layout" instance=ExtResource("5_adkwu")]
custom_minimum_size = Vector2(108, 48)
layout_mode = 2
label = "Continue"

[connection signal="button_up" from="Controls/Margin/Layout/Return" to="." method="_return_from"]
[connection signal="button_up" from="Controls/Margin/Layout/Continue" to="." method="_continue_to"]
